feat: resend account verify and check login (#88)

--- a/system/templates/account.resend_verify_email.html.twig
+++ b/system/templates/account.resend_verify_email.html.twig
@@ -1,23 +1,7 @@
-To generate new recovery key for your account please enter your password.<br/>
-<span>New recovery key cost: <b>{{ config.generate_new_reckey_price }} {{ coin_name }}</b>. You will receive e-mail with this recovery key.</span><br/>
-<span>
-  Coins Balance:
-  {% if coins > 0 %}
-    <span style="color: green; font-weight: bold">{{ coins }} {{ coin_name }}
-      {% if coins < config.account_change_character_name_coins %}
-        <span style="color: red; font-weight: normal"> (you do not have {{ coin_name }} enough,
-                 <a href="?donate" target="_blank">donate</a> now)</span>
-      {% endif %}
-      </span>
-  {% else %}
-    <span style="color: red; font-weight: bold">You do not have {{ coin_name }},
-  <a href="?donate" target="_blank">donate</a> now</span>
-  {% endif %}
-</span>
+Check your information and confirm to send verify e-mail.
 <br/><br/>
-
-<form action="{{ getLink('account/register/new') }}" method="post">
-  <input type="hidden" name="registeraccountsave" value="1">
+<form action="{{ getLink('account/resend/verify') }}" method="post">
+  <input type="hidden" name="confirmresend" value="1">
   <div class="TableContainer">
     <table class="Table1" cellpadding="0" cellspacing="0">
       <div class="CaptionContainer">
@@ -30,7 +14,7 @@ To generate new recovery key for your account please enter your password.<br/>
                 style="background-image:url({{ template_path }}/images/content/table-headline-border.gif);"></span>
           <span class="CaptionVerticalLeft"
                 style="background-image:url({{ template_path }}/images/content/box-frame-vertical.gif);"></span>
-          <div class="Text">Generate recovery key</div>
+          <div class="Text">Confirm Send Verify Email</div>
           <span class="CaptionVerticalRight"
                 style="background-image:url({{ template_path }}/images/content/box-frame-vertical.gif);"></span>
           <span class="CaptionBorderBottom"
@@ -46,8 +30,12 @@ To generate new recovery key for your account please enter your password.<br/>
           <div class="InnerTableContainer">
             <table style="width:100%;">
               <tr>
-                <td class="LabelV"><span>Password:</span></td>
-                <td><input type="password" name="reg_password" size="30" maxlength="29"></td>
+                <td class="LabelV" style="width: 50px"><span>Account name:</span></td>
+                <td>{{ name }}</td>
+              </tr>
+              <tr>
+                <td class="LabelV"><span>E-mail:</span></td>
+                <td>{{ email }}</td>
               </tr>
             </table>
           </div>
