--- a/system/templates/guilds.guildwars.html.twig
+++ b/system/templates/guilds.guildwars.html.twig
@@ -1,4 +1,4 @@
-{% if isLeader %}
+{% if isLeader %} 
 <div class="TableContainer">
   <div class="CaptionContainer">
     <div class="CaptionInnerContainer"> <span class="CaptionEdgeLeftTop" style="background-image:url({{ template_path }}/images/global/content/box-frame-edge.gif);"></span> <span class="CaptionEdgeRightTop" style="background-image:url({{ template_path }}/images/global/content/box-frame-edge.gif);"></span> <span class="CaptionBorderTop" style="background-image:url({{ template_path }}/images/global/content/table-headline-border.gif);"></span> <span class="CaptionVerticalLeft" style="background-image:url({{ template_path }}/images/global/content/box-frame-vertical.gif);"></span>
@@ -24,7 +24,8 @@
 									<td style="width: 19%;">Action</td>
 								</tr>
 								{% for war in wars %}
-								{% if waracpt.statusid == '1' %}
+								{% if war.statusid == '0' %}
+								
 								<tr>
 									<td><a href="?guilds/{{ war.name }}">{{ war.name }}</a></td>
 									<td><span style="width: 120px;" class="HelperDivIndicator" onmouseover="ActivateHelperDiv($(this), '', '<div style = &quot;font-size: 12pt; font-weight: bold; word-break: break-word;&quot;>{{ war.status }}:</div><div style = &quot;margin-bottom: 20px;&quot;>{{ war.statushelper }}</div>', '');" onmouseout="$('#HelperDivContainer').hide();"><i class="fas fa-circle" style="color:{{ war.statuscolor }};"></i> {{ war.status }}</span></td>
@@ -47,9 +48,9 @@
 									</td>
 								</tr>
 								{% endif %}
-								{% if waracpt.statusid != '1' %}
+								{% if war.statusid != '0' %}
 								<tr>
-							  		<td colspan="6">The {{ guild_name }} guild is currently without war requests.</td>
+							  		<td colspan="6" style="text-align: center; padding: 4px;">The {{ guild_name }} guild has 0 pending declarations of war.</td>
 								</tr>
 								{% endif %}
 								{% endfor %}
@@ -76,7 +77,7 @@
 <div class="TableContainer">
   <div class="CaptionContainer">
     <div class="CaptionInnerContainer"> <span class="CaptionEdgeLeftTop" style="background-image:url({{ template_path }}/images/global/content/box-frame-edge.gif);"></span> <span class="CaptionEdgeRightTop" style="background-image:url({{ template_path }}/images/global/content/box-frame-edge.gif);"></span> <span class="CaptionBorderTop" style="background-image:url({{ template_path }}/images/global/content/table-headline-border.gif);"></span> <span class="CaptionVerticalLeft" style="background-image:url({{ template_path }}/images/global/content/box-frame-vertical.gif);"></span>
-      <div class="Text">Guild Wars</div>
+      <div class="Text">Active Declarations of War</div>
       <span class="CaptionVerticalRight" style="background-image:url({{ template_path }}/images/global/content/box-frame-vertical.gif);"></span> <span class="CaptionBorderBottom" style="background-image:url({{ template_path }}/images/global/content/table-headline-border.gif);"></span> <span class="CaptionEdgeLeftBottom" style="background-image:url({{ template_path }}/images/global/content/box-frame-edge.gif);"></span> <span class="CaptionEdgeRightBottom" style="background-image:url({{ template_path }}/images/global/content/box-frame-edge.gif);"></span> </div>
   </div>
   <table class="Table3" cellpadding="0" cellspacing="0">
@@ -90,25 +91,25 @@
 						<div class="TableContentContainer">
 							<table class="TableContent" width="100%"><tbody>
 								<tr class="LabelH">
-								<td>Opponent</td>
+								<td>Opponents</td>
 								<td>Duration</td>
 								<td>Kills to Win</td>
 								<td>Price</td>
 								<td>Current Kills</td>
 							</tr>
 							{% for waracpt in wars %}
-							{% if waracpt.statusid == '2' %}
+							{% if waracpt.statusid == '1' %}
 							<tr>
-								<td><a href="?guilds/{{ waracpt.name }}">{{ waracpt.name }}</a></td>
-								<td><i class="far fa-calendar-star"></i> {{ waracpt.duration }} days</td>
-								<td><i class="far fa-swords"></i> {{ waracpt.kills }}</td>
-								<td><i class="far fa-sack-dollar"></i> {{ waracpt.price }}</td>
-								<td style="font-size: 30px; font-weight: bold; text-align: center;">0 x 0</td>
+								<td style="text-align: center;"><a href="?guilds/{{ waracpt.name }}">{{ waracpt.name }}</a><br> <strong>VS</strong><br><a href="?guilds/{{ waracpt.name2 }}">{{ waracpt.name2 }}</a></td>
+								<td style="text-align: center;"><i class="far fa-calendar-star"></i> {{ waracpt.duration }} days</td>
+								<td style="text-align: center;"><i class="far fa-swords"></i> {{ waracpt.kills }}</td>
+								<td style="text-align: center;"><i class="far fa-sack-dollar"></i> {{ waracpt.price }}</td>
+								<td style="font-size: 30px; font-weight: bold; text-align: center;">{{waracpt.guild1kills}} x {{waracpt.guild2kills}}</td>
 							</tr>
 							{% endif %}
-							{% if waracpt.statusid != '2' %}
+							{% if waracpt.statusid != '1' %}
 							<tr>
-							  <td colspan="6">The guild {{ guild_name }} is currently not involved in a guild war.</td>
+							  <td colspan="6" style="text-align: center; padding: 4px;">The guild {{ guild_name }} is currently not involved in any declarations of war.</td>
 							</tr>
 							{% endif %}
 							{% endfor %}
@@ -164,7 +165,7 @@
 							{% endif %}
 							{% if waracpt.statusid != '3' and waracpt.statusid != '4' %}
 							<tr>
-							  <td colspan="6">The guild {{ guild_name }} has never participated in a guild war.</td>
+							  <td colspan="6" style="text-align: center; padding: 4px;">The guild {{ guild_name }} has never participated in a guild war.</td>
 							</tr>
 							{% endif %}
 							{% endfor %}
