--- a/system/templates/houses.view.html.twig
+++ b/system/templates/houses.view.html.twig
@@ -1,51 +1,56 @@
-<div class="TableContainer">
-    {% if errors is not empty %}
-        {% for error in errors %}
-            <p class="error">{{ error }}</p>
-        {% endfor %}
-    {% else %}
-        <table class="Table1" cellpadding="0" cellspacing="0" style="background-color: {{ config.lightborder }}">
-            <div class="CaptionContainer">
-                <div class="CaptionInnerContainer">
-                    <span class="CaptionEdgeLeftTop" style="background-image:url({{ template_path }}/images/content/box-frame-edge.gif);"></span>
-                    <span class="CaptionEdgeRightTop" style="background-image:url({{ template_path }}/images/content/box-frame-edge.gif);"></span>
-                    <span class="CaptionBorderTop" style="background-image:url({{ template_path }}/images/content/table-headline-border.gif);"></span>
-                    <span class="CaptionVerticalLeft" style="background-image:url({{ template_path }}/images/content/box-frame-vertical.gif);"></span>
-                    <div class="Text" >{{ houseName }}</div>
-                    <span class="CaptionVerticalRight" style="background-image:url({{ template_path }}/images/content/box-frame-vertical.gif);"></span>
-                    <span class="CaptionBorderBottom" style="background-image:url({{ template_path }}/images/content/table-headline-border.gif);"></span>
-                    <span class="CaptionEdgeLeftBottom" style="background-image:url({{ template_path }}/images/content/box-frame-edge.gif);"></span>
-                    <span class="CaptionEdgeRightBottom" style="background-image:url({{ template_path }}/images/content/box-frame-edge.gif);"></span>
-                </div>
-            </div>
-
+{% if errors is not empty %}
+  {% for error in errors %}
+    <p class="error">{{ error }}</p>
+  {% endfor %}
+{% else %}
+  <table border="0" cellpadding="0" cellspacing="0" width="100%">
+    <tbody>
+    <tr>
+      <td>
+        <div class="TableContainer">
+          <table class="Table1" border="0" cellpadding="0" cellspacing="0"
+                 style="background-color: {{ config.lightborder }}">
             <tr>
-                <td>
-                    <div class="InnerTableContainer">
-                        <table border="0" cellpadding="4" cellspacing="1" width="100%">
-                            <tr style="display: inline-flex;">
-                                <td><img src="{{ imgPath }}"></td>
-                                <td>
-                                    {{ bedsMessage }} and has a size of <b>{{ houseSize }} square meters</b>.
+              <td>
+                <div class="InnerTableContainer">
+                  <table border="0" cellpadding="4" cellspacing="1" width="100%">
+                    <tr style="display: inline-flex;">
+                      <td><img src="{{ imgPath }}" alt="{{ houseName }}"></td>
+                      <td>
+                        <b>{{ houseName }}</b><br>
 
-                                    {% if rentType != 'never' %}
-                                        The {{ rentType }} is <b>{{ houseRent }} gold</b> and will be debited to the bank account on <b>{{ config.lua.serverName }}</b>.
-                                    {% endif %}
-                                    <br>
+                        {{ bedsMessage }}<br><br>
+                        The house has a size of <b>{{ houseSize }} square meters</b>.
+                        {% if rentType != 'never' and houseRent > 0 %}
+                          The {{ rentType }} rent is <b>{{ houseRent }}k
+                          gold</b> and will be debited to the bank account on
+                          <b>{{ worldName }}</b>.
+                        {% endif %}
+                        <br><br>
 
-                                    {% if owner is not empty  %}
-                                    The house has been rented by <b>{{ owner|raw }}</b>.
-                                    {% else %}
-                                    No one has bought this house yet.
-                                    {% endif %}
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                </td>
+                        {% if owner is not empty %}
+                          The house has been rented by <b>{{ owner|raw }}</b>.
+                        {% else %}
+                          No one has bought this house yet.
+                        {% endif %}
+                      </td>
+                    </tr>
+
+                    <form action="{{ getLink('houses') }}" method="post">
+                      <tr style="display: flex; flex-direction: column; align-items: center; margin: 20px 0 10px 0">
+                        <td style="border:0">
+                          {{ include('buttons.back.html.twig') }}
+                        </td>
+                      </tr>
+                    </form>
+                  </table>
+                </div>
+              </td>
             </tr>
-        </table>
-    {% endif %}
-
-</div>
-<br><br>
+          </table>
+        </div>
+    </tr>
+    </tbody>
+  </table>
+  <br><br>
+{% endif %}
