--- a/system/templates/online.html.twig
+++ b/system/templates/online.html.twig
@@ -100,7 +100,7 @@
                     <tr>
                       <td width="25%" class="LabelV150">Status:</td>
                       <td>
-                        {{ world.name }} Server is {% if status.online %}<span
+                        {{ world.name }} World is {% if status.online %}<span
                           style="color: #38ff22">Online</span>{% else %} <span
                           style="color: #ce0000">Offline</span>{% endif %}
                       </td>
@@ -300,7 +300,7 @@
                             <tbody>
                             {% if players|length == 0 %}
                               <tr style="text-align: center">
-                                <td>Currently, no one is playing on {{ world.name }} Server.</td>
+                                <td>Currently, no one is playing on {{ world.name }} World.</td>
                               </tr>
                             {% else %}
                               <tr bgcolor="#D4C0A1">
