--- a/system/templates/lastkills.html.twig
+++ b/system/templates/lastkills.html.twig
@@ -37,7 +37,7 @@
                         <td style="vertical-align:middle;" class="LabelV150">World Name:</td>
                         <td style="width: 100%">
                           <select name="world" style="width: 100%">
-                            <option value="">(all worlds or select world)</option>
+                            <option value="">(all worlds or choose world)</option>
                             {% for item in worlds %}
                               <option
                                 value="{{ item.name }}" {% if item.id == world.id %} selected="selected"{% endif %}>{{ item.name }}</option>
